--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=system-ui&family=sans-serif&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
 </head>
 
